@@ -37,8 +37,11 @@ apport (0.92) UNRELEASED; urgency=low
     - test-apport: Pass APPORT_REPORT_DIR to the manually called apport
       instance in the memory clipping test; otherwise it'll write into
       /var/crash/, which we do not consider in library mode.
+  * apport/crashdb_impl/launchpad.py, __init__(): Only do the "download bug
+    #2" hack if we actually have an authentication cookie. Thus, do it only on
+    the retracing servers, not on the client side. (LP: #125142)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 19:32:03 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 19:59:25 +0200
 
 apport (0.91) gutsy; urgency=low
 
